# turtlebot3_applications

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  package.repo  turtlebot3_applications_ci.repos
.github/workflows/: ros-ci.yml
LICENSE/: LICENSE (BSD-3-Clause)
follow_demo_filter/: CMakeLists.txt  package.xml
follow_demo_filter/filter/: follow_demo_filter.yaml
follow_demo_filter/launch/: follow_demo_filter.launch
turtlebot02_follower/: CMakeLists.txt  package.xml
turtlebot02_follower/launch/: turtlebot02_follower.launch
turtlebot02_follower/src/: turtlebot02_follower.cpp  turtlebot03_follower.cpp  turtlebotA_subscriber.cpp  turtlebotB_subscriber.cpp
turtlebot3_applications/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_aruco_tracker/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
turtlebot3_aruco_tracker/launch/: turtlebot3_aruco_tracker.launch.py
turtlebot3_aruco_tracker/turtlebot3_aruco_tracker/: turtlebot3_aruco_tracker.py
turtlebot3_auto_docking/: CMakeLists.txt  package.xml
turtlebot3_auto_docking/filter/: turtlebot3_follow_filter.yaml
turtlebot3_auto_docking/launch/: change_node.launch  get_goal_position.launch  goal_position_broadcaster.launch  searching_docking_station.launch  turtlebot3_auto_docking.launch
turtlebot3_auto_docking/src/: change_node.cpp  get_goal_position.cpp  goal_position_broadcaster.cpp  searching_docking_station.cpp  turtlebot3_auto_docking.cpp
turtlebot3_auto_docking/srv/: ChangeNode.srv
turtlebot3_automatic_parking/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_automatic_parking/launch/: turtlebot3_automatic_parking.launch  turtlebot3_automatic_parking.launch.py
turtlebot3_automatic_parking/nodes/: automatic_parking
turtlebot3_automatic_parking/rviz/: turtlebot3_automatic_parking.rviz
turtlebot3_automatic_parking/scripts/: automatic_parking.py
turtlebot3_automatic_parking/src/: automatic_parking.py
turtlebot3_automatic_parking/turtlebot3_automatic_parking/: turtlebot3_automatic_parking.py  turtlebot3_automatic_parking_1.py
turtlebot3_automatic_parking/turtlebot3_automatic_parking/turtlebot3_automatic_parking/: main.py  turtlebot3_automatic_parking.py
turtlebot3_automatic_parking_vision/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
turtlebot3_automatic_parking_vision/launch/: 4vl2_camera.launch.py  turtlebot3_automatic_parking_vision.launch  turtlebot3_automatic_parking_vision.launch.py
turtlebot3_automatic_parking_vision/nodes/: automatic_parking_vision
turtlebot3_automatic_parking_vision/rviz/: turtlebot3_automatic_parking_vision.rviz
turtlebot3_automatic_parking_vision/turtlebot3_automatic_parking_vision/: turtlebot3_automatic_parking_vision.py  turtlebot3_automatic_parking_vision1.py  turtlebot3_automatic_parking_vision2.py
turtlebot3_follow_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_follow_filter/filter/: turtlebot3_follow_filter.yaml
turtlebot3_follow_filter/launch/: turtlebot3_follow_filter.launch
turtlebot3_follow_turtlebot3/: CMakeLists.txt  package.xml
turtlebot3_follow_turtlebot3/launch/: turtlebot3_follow_turtlebot3.launch
turtlebot3_follow_turtlebot3/src/: turtlebot3_follow_turtlebot3.cpp  turtlebot3_tf_broadcaster.cpp
turtlebot3_follower/: CHANGELOG.rst  CMakeLists.txt  package.xml  reality_robot.rviz  rviz.rviz  setup.cfg  setup.py  simulation_robot.rviz
turtlebot3_follower/config/: add_comment  add_data  clf  clf2
turtlebot3_follower/filter/: turtlebot3_follow_filter.yaml
turtlebot3_follower/include/turtlebot3_follower/: follower.hpp
turtlebot3_follower/launch/: turtlebot3_follower.launch  turtlebot3_follower.launch.py
turtlebot3_follower/nodes/: follower  laser_subscriber  ploting
turtlebot3_follower/param/: controll_server1.yaml  controll_server2.yaml  controll_server3.yaml  controll_server4.yaml
turtlebot3_follower/rviz/: tb3_follower.rviz
turtlebot3_follower/scripts/: follower.py  laser_subscriber.py  ploting.py
turtlebot3_follower/src/: add_comment  add_data  clf  clf2  clf21  comments_training_set  comments_training_set2  follower.cpp  follower.py  laser_scan_data_training_set  laser_scan_data_training_set2  laser_subscriber.py  ploting.py  range_msgs
turtlebot3_follower/turtlebot3_follower/: laser_subscriber.py  turtlebot3_follower.py
turtlebot3_panorama/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
turtlebot3_panorama/include/turtlebot3_panorama/: geometry.h  geometry.hpp  panorama.h  panorama.hpp
turtlebot3_panorama/include/turtlebot_panorama/: panorama.h
turtlebot3_panorama/launch/: panorama.launch  turtlebot3_panorama.launch.py
turtlebot3_panorama/scripts/: loop.py
turtlebot3_panorama/src/: main.cpp  panorama.cpp
turtlebot3_yolo_object_detection/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
turtlebot3_yolo_object_detection/launch/: turtlebot3_yolo_object_detection.launch.py
turtlebot3_yolo_object_detection/turtlebot3_yolo_object_detection/: turtlebot3_yolo_object_detection.py
turtlebot_follow_filter/: CMakeLists.txt  package.xml
turtlebot_follow_filter/filter/: turtlebot_follow_filter.yaml
turtlebot_follow_filter/launch/: turtlebot_follow_filter.launch
turtlebot_follow_turtlebot/: CMakeLists.txt  package.xml
turtlebot_follow_turtlebot/launch/: turtlebot_follow_turtlebot.launch
turtlebot_follow_turtlebot/src/: turtlebot_follow_turtlebot.cpp  turtlebot_tf_broadcaster.cpp
