<?xml version="1.0"?>
<package>
  <name>turtlebot02_follower</name>
  <version>0.1.0</version>
  <description>turtlebot02_follower package</description>
  <maintainer email="rlaqhrud852@gmail.com">ashe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
