<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_applications</name>
  <version>1.3.3</version>
  <description>
    ROS packages for the turtlebot3 applications (meta package)
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author>Christopher Tatsch</author>
  <author>Ashe Kim</author>
  <author>Leon Jung</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <author email="nys8277@gmail.com">YeonSoo Noh</author>
  <author email="kimhg@robotis.com">Hyungyu Kim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>turtlebot3_aruco_tracker</exec_depend>
  <exec_depend>turtlebot3_automatic_parking</exec_depend>
  <exec_depend>turtlebot3_automatic_parking_vision</exec_depend>
  <exec_depend>turtlebot3_follower</exec_depend>
  <exec_depend>turtlebot3_panorama</exec_depend>
  <exec_depend>turtlebot3_yolo_object_detection</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
