<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_aruco_tracker</name>
  <version>1.1.1</version>
  <description>
    ArUco Tracker for TurtleBot3 Examples.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>python3-scipy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
