<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_docking</name>
  <version>0.1.0</version>
  <description>The turtlebot3_auto_docking package</description>

  <maintainer email="rlaqhrud852@gmail.com">ashe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>laser_geometry</run_depend>

  <export>
  </export>
</package>
