<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_automatic_parking</name>
  <version>2.0.0</version>
  <description>
	  Package for turtlebot3 automatic_parking. You need a reflective tape and real robots. You can see parking spot using this pacakge on rviz.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="kkjong@robotis.com">Gilbert</maintainer>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="nys8277@gmail.com">YeonSoo Noh</author>
  <depend>rclpy</depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <export>
    <url type="website">http://wiki.ros.org/turtlebot3_automatic_parking</url>
    <url type="emanual">http://turtlebot3.robotis.com</url>
    <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
    <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
    <build_type>ament_python</build_type>
  </export>

</package>
