<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_automatic_parking_vision</name>
  <version>1.3.3</version>
  <description>
	  Automatic Parking Vision for TurtleBot3 Examples.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-scipy</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
