<?xml version="1.0"?>
<package>
  <name>turtlebot3_follow_filter</name>
  <version>0.1.0</version>
  <description>turtlebot3_follow_filter package</description>

  <maintainer email="rlaqhrud852@gmail.com">ashe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>laser_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>laser_filters</run_depend>

  <export>
     </export>
</package>
