<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_follow_filter</name>
  <version>1.1.0</version>
  <description>
    turtlebot3_follow_filter package using laser_filters for turtlebot3_follower package
  </description>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Christopher Tatsch</author>
  <author>Ashe Kim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="kkjong@robotis.com">Gilbert</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_follow_filter</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>laser_filters</exec_depend>
</package>
